fixed style issues`